add content translate on scroll

--- a/css/main.styl
+++ b/css/main.styl
@@ -65,8 +65,14 @@ body, html
 	        transition: all .25s ease-in-out;
 
 	&.is-check
-		background-color: red
+		// background-color: red
 		z-index:  1
+		position fixed
+		rect 100%
+		left 0
+		top 0
+		background-color red
+
 	&:after
 		position absolute
 		top 50%
