--- a/css/main.css
+++ b/css/main.css
@@ -67,8 +67,13 @@ html {
   transition: all 0.25s ease-in-out;
 }
 .section-b.is-check {
-  background-color: #f00;
   z-index: 1;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-color: #f00;
 }
 .section-b:after {
   position: absolute;
