--- a/css/main.styl
+++ b/css/main.styl
@@ -62,9 +62,10 @@ body, html
 
 	&:active
 		&:after
-			rect 60px
-			margin-top -30px
-			margin-left -30px
+			rect 76px
+			margin-top -38px
+			margin-left -38px
+			background-size 100% 100%
 			-webkit-transition: all .15s ease-out;
 			   -moz-transition: all .15s ease-out;
 			     -o-transition: all .15s ease-out;
@@ -79,22 +80,74 @@ body, html
 		top 0
 		background-color red
 
+
 	&:after
 		position absolute
 		top 50%
 		left 50%
-		margin-top -15px
-		margin-left -15px
+		margin-top -50px
+		margin-left -50px
 		content: ''
-		rect 30px
-		background-color white
-		border-radius 50%
+		rect 100px
+		background transparent url('/icons/icecreame.png') no-repeat center center
+		background transparent url('/paperjs scroll sections/icons/icecreame.png') no-repeat center center
+		background-size 100% 100%
+
+	&.is-watermellon
+		&:after
+			background transparent url('/icons/watermellon.png') no-repeat center center
+			background transparent url('/paperjs scroll sections/icons/watermellon.png') no-repeat center center
+			background-size 100% 100%
 
 
-
-	
-
-	
+	&.is-fish
+		&:after
+			background transparent url('/icons/fish.png') no-repeat center center
+			background transparent url('/paperjs scroll sections/icons/fish.png') no-repeat center center
+			background-size 100% 100%
+				
+	&.is-donut
+		&:after
+			background transparent url('/icons/donut.png') no-repeat center center
+			background transparent url('/paperjs scroll sections/icons/donut.png') no-repeat center center
+			background-size 100% 100%
+			
+	&.is-icecreame
+		&:after
+			background transparent url('/icons/icecreame2.png') no-repeat center center
+			background transparent url('/paperjs scroll sections/icons/icecreame2.png') no-repeat center center
+			background-size 100% 100%
+				
+	&.is-bananas
+		&:after
+			background transparent url('/icons/bananas.png') no-repeat center center
+			background transparent url('/paperjs scroll sections/icons/bananas.png') no-repeat center center
+			background-size 100% 100%
+			
+	&.is-drink
+		&:after
+			background transparent url('/icons/drink.png') no-repeat center center
+			background transparent url('/paperjs scroll sections/icons/drink.png') no-repeat center center
+			background-size 100% 100%
+			
+	&.is-candies
+		&:after
+			background transparent url('/icons/candies.png') no-repeat center center
+			background transparent url('/paperjs scroll sections/icons/candies.png') no-repeat center center
+			background-size 100% 100%
+			
+	&.is-pizza
+		&:after
+			background transparent url('/icons/pizza.png') no-repeat center center
+			background transparent url('/paperjs scroll sections/icons/pizza.png') no-repeat center center
+			background-size 100% 100%
+				
+	&.is-china
+		&:after
+			background transparent url('/icons/china.png') no-repeat center center
+			background transparent url('/paperjs scroll sections/icons/china.png') no-repeat center center
+			background-size 100% 100%
+				
 
 
 
