--- a/index.jade
+++ b/index.jade
@@ -15,6 +15,7 @@ html
 					id="myCanvas1"
 
 					class="canvas-e"
+					resize="true"
 				)
 
 				.content-ll#js-content
@@ -41,6 +42,4 @@ html
 		script(type="text/javascript", src="js/dat.gui.min.js")
 		script(type="text/javascript", src="js/paper.js")
 		script(type="text/paperscript", src="js/main.js", canvas="myCanvas1")
-		script(type="text/javascript", src="js/jq-events.js")
-			
 		script(type="text/javascript", src="js/after.js")
