--- a/index.jade
+++ b/index.jade
@@ -6,6 +6,7 @@ html
 		link(rel="stylesheet", type="text/css", href="css/main.css")
 		meta(name="viewport", content="initial-scale = 1.0, maximum-scale = 1.0, user-scalable = no, width = device-width")
 	body
+		.suggest-l
 		.iphone-l
 			.screen-ll
 				#wrapper
@@ -36,7 +37,7 @@ html
 
 		script(type="text/javascript", src="js/lib/jquery-2.0.1.js")
 		script(type="text/javascript", src="js/iscroll.js")
-		script(type="text/javascript", src="js/modernizr.js")
+		script(type="text/javascript", src="js/jquery.mousewheel.js")
 		script(type="text/javascript", src="js/tween.min.js")
 		script(type="text/javascript", src="js/dat.gui.min.js")
 		script(type="text/javascript", src="js/paper.js")
