--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,17 @@ html {
   overflow: auto;
   font-family: monospace;
   background-color: #eeebf0;
+  position: relative;
+}
+.suggest-l {
+  width: 300px;
+  height: 300px;
+  background: transparent url("../i/suggest.png") no-repeat center center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: 200px;
+  margin-top: -200px;
 }
 .iphone-l {
   width: 600px;
@@ -155,4 +166,15 @@ html {
   background: transparent url("/icons/china.png") no-repeat center center;
   background: transparent url("/paperjs scroll sections/icons/china.png") no-repeat center center;
   background-size: 100% 100%;
+}
+@media all and (max-width:930px) {
+  .suggest-l {
+    margin-left: -150px;
+    top: 0;
+    margin-top: 0;
+  }
+  .iphone-l {
+    margin: 0 auto;
+    margin-top: 250px;
+  }
 }
