--- a/css/main.css
+++ b/css/main.css
@@ -15,18 +15,19 @@ html {
   position: relative;
 }
 .suggest-l {
-  width: 300px;
-  height: 300px;
+  width: 150px;
+  height: 150px;
   background: transparent url("../i/suggest.png") no-repeat center center;
   position: absolute;
+  background-size: 100%;
   top: 50%;
   left: 50%;
   margin-left: 200px;
   margin-top: -200px;
 }
 .iphone-l {
-  width: 600px;
-  height: 1061px;
+  width: 400px;
+  height: 707px;
   margin: 0 auto;
   margin-top: 50px;
   background: transparent url("../i/iphone.png") no-repeat center center;
@@ -34,10 +35,10 @@ html {
 }
 .iphone-l > .screen-ll {
   position: absolute;
-  top: 185px;
-  left: 91px;
-  width: 416px;
-  height: 713px;
+  top: 123px;
+  left: 60px;
+  width: 278px;
+  height: 475px;
 }
 .touch {
   overflow: hidden !important;
@@ -85,7 +86,7 @@ html {
   transform: rotate3d(0, 0, 0);
 }
 .section-b {
-  height: 200px;
+  height: 150px;
   position: relative;
   cursor: pointer;
 }
@@ -113,11 +114,11 @@ html {
   position: absolute;
   top: 50%;
   left: 50%;
-  margin-top: -50px;
-  margin-left: -50px;
+  margin-top: -34px;
+  margin-left: -34px;
   content: '';
-  width: 100px;
-  height: 100px;
+  width: 75px;
+  height: 75px;
   background: transparent url("/icons/icecreame.png") no-repeat center center;
   background: transparent url("/paperjs scroll sections/icons/icecreame.png") no-repeat center center;
   background-size: 100% 100%;
@@ -169,12 +170,12 @@ html {
 }
 @media all and (max-width:930px) {
   .suggest-l {
-    margin-left: -150px;
+    margin-left: -75px;
     top: 0;
-    margin-top: 0;
+    margin-top: 25px;
   }
   .iphone-l {
     margin: 0 auto;
-    margin-top: 250px;
+    margin-top: 180px;
   }
 }
