--- a/css/main.styl
+++ b/css/main.styl
@@ -13,9 +13,10 @@ body, html
 	position relative
 
 .suggest-l
-	rect 300px
+	rect 150px
 	background transparent url("../i/suggest.png") no-repeat center center
 	position absolute
+	background-size 100%
 	top 50%
 	left 50%
 	margin-left 200px
@@ -24,8 +25,8 @@ body, html
 
 	
 .iphone-l
-	width 600px
-	height 1061px
+	width 400px
+	height 707px
 	margin 0 auto
 	margin-top 50px
 	background transparent url("../i/iphone.png") no-repeat center center
@@ -33,10 +34,10 @@ body, html
 
 	> .screen-ll
 		position absolute
-		top 185px
-		left 91px
-		width 416px
-		height 713px
+		top 123px
+		left 60px
+		width 278px
+		height 475px
 
 .touch
 	overflow hidden !important
@@ -84,7 +85,7 @@ body, html
 
 
 .section-b
-	height 200px
+	height 150px
 	position relative
 	cursor pointer
 
@@ -113,10 +114,10 @@ body, html
 		position absolute
 		top 50%
 		left 50%
-		margin-top -50px
-		margin-left -50px
+		margin-top -34px
+		margin-left -34px
 		content: ''
-		rect 100px
+		rect 75px
 		background transparent url('/icons/icecreame.png') no-repeat center center
 		background transparent url('/paperjs scroll sections/icons/icecreame.png') no-repeat center center
 		background-size 100% 100%
@@ -181,12 +182,12 @@ body, html
 
 @media all and (max-width:930px){
 	.suggest-l{
-		margin-left -150px
+		margin-left -75px
 		top 0
-		margin-top 0
+		margin-top 25px
 	}
 	.iphone-l{
 		margin 0 auto
-		margin-top 250px 
+		margin-top 180px 
 	}
 }
