--- a/css/main.styl
+++ b/css/main.styl
@@ -67,9 +67,7 @@ body, html
 		top 0
 		left 0
 		rect 100%
-		// max-height 100%
 		overflow hidden
-
 		font-size 25px
 		line-height 30px
 		-webkit-transform: rotate3d(0,0,0);
@@ -77,10 +75,10 @@ body, html
 		    -ms-transform: rotate3d(0,0,0);
 		     -o-transform: rotate3d(0,0,0);
 		        transform: rotate3d(0,0,0);
-		// -webkit-transition: all .1s ease-in;
-		   // -moz-transition: all .1s ease-in;
-		     // -o-transition: all .1s ease-in;
-		        // transition: all .1s ease-in;
+		        -webkit-transition: transform .05s linear;
+		           -moz-transition: transform .05s linear;
+		             -o-transition: transform .05s linear;
+		                transition: transform .05s linear;
 
 
 .section-b
