--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,7 @@ html {
   left: 91px;
   width: 416px;
   height: 713px;
+  overflow: hidden;
 }
 .touch {
   overflow: hidden !important;
@@ -50,6 +51,10 @@ html {
   width: 100%;
   height: 100%;
   overflow: auto;
+  overflow-x: hidden;
+}
+#wrapper.is-with-scroll {
+  width: 432px;
 }
 #wrapper .menu-l {
   position: relative;
@@ -83,10 +88,6 @@ html {
   -ms-transform: rotate3d(0, 0, 0);
   -o-transform: rotate3d(0, 0, 0);
   transform: rotate3d(0, 0, 0);
-  -webkit-transition: transform 0.05s linear;
-  -moz-transition: transform 0.05s linear;
-  -o-transition: transform 0.05s linear;
-  transition: transform 0.05s linear;
 }
 .section-b {
   height: 200px;
