--- a/css/main.styl
+++ b/css/main.styl
@@ -37,6 +37,7 @@ body, html
 		left 91px
 		width 416px
 		height 713px
+		overflow hidden
 
 .touch
 	overflow hidden !important
@@ -48,6 +49,10 @@ body, html
 	top 0
 	rect 100%
 	overflow auto
+	overflow-x hidden
+
+	&.is-with-scroll
+		width 432px
 	
 	.menu-l
 		position relative
@@ -75,10 +80,10 @@ body, html
 		    -ms-transform: rotate3d(0,0,0);
 		     -o-transform: rotate3d(0,0,0);
 		        transform: rotate3d(0,0,0);
-		        -webkit-transition: transform .05s linear;
-		           -moz-transition: transform .05s linear;
-		             -o-transition: transform .05s linear;
-		                transition: transform .05s linear;
+		        // -webkit-transition: transform .05s linear;
+		           // -moz-transition: transform .05s linear;
+		             // -o-transition: transform .05s linear;
+		                // transition: transform .05s linear;
 
 
 .section-b
